# rocket-rs

./: Cargo.toml
src/: main.rs
src/controllers/: mod.rs
src/controllers/auth/: mod.rs
src/controllers/common/: mod.rs  not_found.rs  unauthorized.rs
src/controllers/rustaceans/: create.rs  delete.rs  mod.rs  read.rs  read_one.rs  update.rs
