[package]
name = "rocket-app"
version = "0.1.0"
authors = ["Pedro La Rosa <pedrolarosa@cornerjob.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"
base64 = "0.13"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
